--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,77 @@ body {
   color: #222;
   background: #f7f5f0;
 }
+
+/*************************************
+PAGE: ABOUT
+*************************************/
+.profile-photo {
+	display: block;
+	max-width: 150px;
+	margin: 0 auto 30px;
+	border-radius: 100%;
+}
+
+.contact-info{
+	list-style: none;
+	padding: 0;
+	margin: 0;
+	font-size: 0.9em;
+}
+
+.contact-info a {
+	display: block;
+	min-height: 20px;
+	background-repeat: no-repeat;
+	background-size: 20px 20px;
+	padding: 0 0 0 30px;
+	margin: 0 0 10px;
+}
+
+.contact-info li.phone a {
+	background-image: url('../images/phone.png');
+}
+
+.contact-info li.mail a {
+	background-image: url('../images/mail.png');
+}
+
+.contact-info li.twitter a {
+	background-image: url('../images/twitter.png');
+}
+
+#wrapper{
+	max-width: 948px;
+	margin: 0 auto;
+	padding: 0 5%;	
+}
+
+h3, #wrapper ul li{
+	text-align: left;
+	
+}
+
+#wrapper p {
+	text-align: left;
+}
+
+img {
+	max-width: 100%;
+}
+
+h1 {
+	font-family: 'Open Sans', sans-serif;
+	margin: 15px 0;
+	font-size: 1.75em;
+	font-weight: normal;
+	line-height: 0.8em;
+}
+
+
+h3 {
+	margin: 0 0 1em 0;
+}
+
 /* Link Styles */
 
 a {
@@ -171,6 +242,7 @@ a.social:hover {
   clear: both;
 }
 
+
 /* Styles for larger screens */
 @media screen and (min-width: 720px) {
   
@@ -185,7 +257,7 @@ a.social:hover {
 
   header {
     min-height: 470px;
-	border-bottom: solid #599a68;
+	border-bottom: 5px solid #599a68;
 	margin-bottom: 60px;
   }
 
@@ -208,6 +280,37 @@ a.social:hover {
     max-width: 1200px;
     margin: 40px auto;
   }
+  
+  .profile-photo {
+	float: left;
+	margin: 0 5% 80px 0;
+  }
+  	
+  #primary {
+	width: 20%;
+	float: left;
+  }
+	
+  #secondary {
+	width: 70%;
+	float: right;
+  }
 
+  #prim {
+	width: 70%;
+	float: left;
+  }
+	
+  #sec {
+	width: 20%;
+	float: right;
+  }
 }
 
+@media screen and (min-width: 480px) {
+  header {
+	border-bottom: solid #599a68;
+	margin-bottom: 90px;
+  }
+
+}
